[project]
name = "langgraphs-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.7",
    "fastapi>=0.115.9",
    "generative-ai-hub-sdk[all]>=4.10.2",
    "grandalf>=0.8",
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.31",
    "langsmith>=0.3.32",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]
